# cryptonite

./: .gitignore  CMakeLists.txt  README.md  backtest.cpp  backtest.h  dataset.cpp  dataset.h  equity.h  function.cpp  function.h  indicator.cpp  indicator.h  main.cpp  metrics.h  random.cpp  random.h  rules.cpp  rules.h  strategy.cpp  strategy.h  trigger.cpp  trigger.h
cli/: app.cpp  app.h  command.cpp  command.h  configure.cpp  configure.h  data.h  database.cpp  database.h  generate.h  strategy_command.h
include/: CLI11.hpp  CMakeLists.txt  date.h  progress.hpp  tabulate.hpp
include/fort/: CMakeLists.txt
include/indicators/: CMakeLists.txt  cindicators.c  cindicators.h
lib/json/: json.h
src/: backtest.cpp  backtest.h  binance.cpp  binance.h  config.cpp  config.h  constants.cpp  constants.h  dataset.cpp  dataset.h  datastore.cpp  datastore.h  dna.cpp  dna.h  equity.cpp  function.cpp  function.h  genetic_algorithm.hpp  indicator.cpp  indicator.h  json_file_handler.cpp  json_file_handler.h  metrics.cpp  metrics.h  random.cpp  random.h  strategy.cpp  strategy.h  top_n_container.h  trigger.cpp  trigger.h
tests/: test.cpp  test.h
